fixed bug on mobile timeline images were not in center of its parent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ nav a {
     flex-direction: column;
     gap: 1em;
     justify-content: space-between;
+    align-items: center;
 }
 
 .timeline-event-content-list {
